three-tier-application-prod/3tierapp/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
