three-tier-application-prod/3tierapp/mysql-headless-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: three-tier
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - port: 3306
